No sound from scene strip #66279

Closed
opened 2019-06-30 14:46:37 +02:00 by Jens Ruda · 5 comments

System Information
Operating system: Linux-3.10.0-957.21.3.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits
Graphics card: Quadro FX 1800/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.107

Also tested on RHEL 8 (beta) with Intel graphics.

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: be060c3990

Short description of error
I need to switch between/toggle "Camera" and "Sequencer" in scene strip input to hear the sound from the scene strip when I press "Play Animation". When I render it will be without sound.

Exact steps for others to reproduce the error

  1. Add a sound strip in the sequencer.
  2. Create a new scene and go to the sequencer.
  3. Add the first scene (scene strip).
  4. Select "Camera" as input.

(Save, quit and open the .blend file)

**System Information** Operating system: Linux-3.10.0-957.21.3.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits Graphics card: Quadro FX 1800/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.107 Also tested on RHEL 8 (beta) with Intel graphics. **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: `be060c3990` **Short description of error** I need to switch between/toggle "Camera" and "Sequencer" in scene strip input to hear the sound from the scene strip when I press "Play Animation". When I render it will be without sound. **Exact steps for others to reproduce the error** 1. Add a sound strip in the sequencer. 2. Create a new scene and go to the sequencer. 3. Add the first scene (scene strip). 4. Select "Camera" as input. (Save, quit and open the .blend file)
Author

Added subscriber: @jaker-3

Added subscriber: @jaker-3
Author

Test file: example.blend

Test file: [example.blend](https://archive.blender.org/developer/F7557226/example.blend)
Sergey Sharybin was assigned by Jens Ruda 2019-06-30 15:55:55 +02:00

If the strip is set to "Camera", none of the strips from that scene is used. If you want sound strips from the scene to be used the input is to be set to Sequencer.

The real issue here is that toggling input does not remove sound from playback.

If the strip is set to "Camera", none of the strips from that scene is used. If you want sound strips from the scene to be used the input is to be set to Sequencer. The real issue here is that toggling input does not remove sound from playback.

This issue was referenced by 89946834a1

This issue was referenced by 89946834a1708db91645aac4fb950b7588035d6d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66279
No description provided.